tests/invalid/simple/VarDecl_Invalid_2.whiley
define vcf2nat as int requires $ >= 0

void System::main([string] args):
    vcf2nat x = -1
